syntax = "proto3";

message Message1 {
  int32 id = 1;
  string name = 2;
}
