syntax = "proto3";

message Message2 {
  string className = 1;
  int32 student = 2;
}
