syntax = "proto3";

message Message3 {
  string lastName = 1;
}
