import { WebSocketClientImpl } from "./connection/WebSocketClientImpl";

const ws = new WebSocketClientImpl();
ws.connect("ws://localhost:8081", [
  "./src/protos/message1.proto",
  "./src/protos/message2.proto",
  "./src/protos/message3.proto",
  "./src/protos/chien.proto",
]);

ws.onConnect(() => {
  console.log("‚úÖ K·∫øt n·ªëi th√†nh c√¥ng!");

  // D·ªØ li·ªáu gi·∫£ l·∫≠p
  const message1 = { id: 1, name: "Nguyen Van A" };
  const message2 = { className: "12A", student: 30 };
  const message3 = {
    lastName: "AB",
  };
  const abc = { name: "Le Minh Chien" };

  // G·ª≠i tin nh·∫Øn
  ws.send(1, message1, "Message1");
  ws.send(2, message2, "Message2");
  ws.send(3, message3, "Message3");
  ws.send(4, abc, "Chien");
});

ws.onMessage(1, (message) => {
  console.log("üì• Nh·∫≠n message1 t·ª´ server:", message);
});

ws.onMessage(2, (message) => {
  console.log("üì• Nh·∫≠n message2 t·ª´ server:", message);
});

ws.onMessage(3, (message) => {
  console.log("üì• Nh·∫≠n message3 t·ª´ server:", message);
});

ws.onMessage(4, (message) => {
  console.log("üì• Nh·∫≠n Chien t·ª´ server:", message);
});

ws.onClose(() => {
  console.log("‚ùå Server ƒë√≥ng k·∫øt n·ªëi.");
});

ws.onError((error) => {
  console.error("‚ö†Ô∏è L·ªói WebSocket:", error);
});
